Added getJoinedChannel() method